--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>FXMT Darts</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="static/assets/css/main.css" />
@@ -27,10 +27,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="stats.html">Stats</a></li>
 										</ul>
 									</div>
 								</li>
@@ -87,9 +84,9 @@
 						
 						<section class="spotlight div-player style1">
 							<div class="player-info">
-								<h2>El Gran Caero.</h2>
+								<h2></h2>
 							</div>
-							<div class="image"><img class="player-img" src="static/images/caero.jpg" alt="" /></div>
+							<div class="image"><img class="player-img" src="" alt="" /></div>
 							<div class="content">
 								<div class="table-wrapper">
 									<table id="pl1_score">
@@ -115,9 +112,9 @@
 						
 						<section class="spotlight div-player">
 							<div class="player-info">
-								<h2>El Gran Caero.</h2>
+								<h2></h2>
 							</div>
-							<div class="image"><img class="player-img" src="static/images/caero.jpg" alt="" /></div>
+							<div class="image"><img class="player-img" src="" alt="" /></div>
 							<div class="content">
 								<div class="table-wrapper">
 									<table id="pl2_score">
@@ -172,12 +169,12 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Senor Hot Fingers</li><li>FXMT Darts App</li>
+							<li>&copy; Señor Hot Fingers</li><li>FXMT Darts App</li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Untitled</li><li>HTML Template: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
-						<div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+						<div style="font-size:x-small;">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 					</footer>
 
 			</div>
