--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
 					<section id="banner">
 						<div class="logo">
 							<h2>FXMT Darts</h2>
-							<img id="logo-image" src="static/images/fox_blue.png">
+							<img id="logo-image" src="static/images/fox.png">
 						</div>
 						
 						<div class="inner">
