--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="logo">
+							<h1>Hello</h1>
 							<h2>FXMT Darts</h2>
 							<img id="logo-image" src="static/images/fox.png">
 						</div>
