--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -3369,7 +3369,7 @@ input, select, textarea {
 		-ms-transition: -ms-transform 0.5s ease;
 		transition: transform 0.5s ease;
 		-webkit-overflow-scrolling: touch;
-		background: #21b2a6;
+		background: #ed4933;
 		color: #ffffff;
 		height: 100%;
 		max-width: 80%;
@@ -3429,7 +3429,7 @@ input, select, textarea {
 			position: absolute;
 			right: 0;
 			top: 0;
-			vertical-align: middle;
+			/* vertical-align: middle; */
 			width: 7em;
 		}
 
