--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,8 +26,8 @@
 									<a href="#menu" class="menuToggle"><span>Settings</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="stats.html">Stats</a></li>
+											<li><a href="{{ url_for('greet')}}">Home</a></li>
+											<li><a href="{{ url_for('add_player')}}">Stats</a></li>
 										</ul>
 									</div>
 								</li>
