--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -3,18 +3,14 @@
 	
 	<div class="inner">
 		<div class="row" style="justify-content: center;">
-			
-			<div class="create-player" style="width: 100%;">
-				<input type="text" id="new-player-name" style="width: 50%;" placeholder="name">
+			<div class="welcome-player" style="width: 60%;">
+				<p>{{ player }}</p>
 			</div>
 			<ul class="actions special">
-				<li><a id="submit-new-player" class="button primary">Create Player</a></li>
-			</ul>
-				
-		</div>
-		
+				<li><a id="back-to-homepage" class="button primary">Go to game</a></li>
+			</ul>		
+		</div>	
 	</div>
-	
 </section>
 
 <!-- Two -->
