--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -4056,6 +4056,18 @@ input, select, textarea {
 	.error-message {
 		color: #ed4933;
 	}
+
+	.welcome-player {
+		width: 60%;
+		background-color: mediumblue;
+		opacity: 0.7;
+	}
+		.welcome-player p {
+			font-size: 1.5em;
+		}
+
+
+
 	#logo-image {
 		width: 30%;
 	}
