--- a/templates/index.html
+++ b/templates/index.html
@@ -39,11 +39,16 @@
 <section id="two" class="wrapper alt style2">
 	
 	<section class="spotlight div-player style1">
-		<div class="player-info">
+		<div class="player-info game-init">
 			<h2></h2>
+			<label for="game-stats">Game Stats</label>
+			<ul class="alt game-stats" id="game-stats-1">
+				<li class="match-average">3-Darts Average:&nbsp;&nbsp;</li>
+				<li class="match-num-darts">Thrown:&nbsp;&nbsp;</li>
+			</ul>
 		</div>
-		<div class="image"><img class="player-img" src="" alt="" /></div>
-		<div class="content">
+		<div class="image game-init"><img class="player-img" src="" alt="" /></div>
+		<div class="content game-init">
 			<div class="table-wrapper">
 				<table id="pl1_score">
 					<thead>
@@ -67,11 +72,17 @@
 <section id="three" class="wrapper alt style4">
 	
 	<section class="spotlight div-player">
-		<div class="player-info">
+		<div class="player-info game-init">
 			<h2></h2>
+			<label for="game-stats">Game Stats</label>
+			<ul class="alt game-stats" id="game-stats-2">
+				<li class="match-average">3-Darts Average:&nbsp;&nbsp;</li>
+				<li class="match-num-darts">Thrown:&nbsp;&nbsp;</li>
+			</ul>
+			
 		</div>
-		<div class="image"><img class="player-img" src="" alt="" /></div>
-		<div class="content">
+		<div class="image game-init"><img class="player-img" src="" alt="" /></div>
+		<div class="content game-init">
 			<div class="table-wrapper">
 				<table id="pl2_score">
 					<thead>
