small changes: game stats, tab icon

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,7 @@
 			<ul class="alt game-stats" id="game-stats-1">
 				<li class="match-average">3-Darts Average:&nbsp;&nbsp;</li>
 				<li class="match-num-darts">Thrown:&nbsp;&nbsp;</li>
+				<li class="match-26">twenty6:&nbsp;&nbsp;</li>
 			</ul>
 		</div>
 		<div class="image game-init"><img class="player-img" src="" alt="" /></div>
@@ -78,6 +79,7 @@
 			<ul class="alt game-stats" id="game-stats-2">
 				<li class="match-average">3-Darts Average:&nbsp;&nbsp;</li>
 				<li class="match-num-darts">Thrown:&nbsp;&nbsp;</li>
+				<li class="match-26">twenty6:&nbsp;&nbsp;</li>
 			</ul>
 			
 		</div>
