--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,8 @@
 <html>
 	<head>
 		<title>FXMT Darts</title>
+		<link rel = "icon" href = "{{ url_for('static', filename='/images/fox_blue.png') }}" 
+        type = "image/x-icon">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='/assets/css/main.css') }}" />
