Add trophy for champs

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,14 @@
 					<h3>Choose Player 1.</h3>
 					<fieldset>
 					{% for player in players %}
-						<input type="radio" id="{{ player.playerId }}" name="player1" value="{{ player.name }}">
-						<label for = "{{ player.playerId }}">{{ player.name }}</label>
+						{% if player.playerId in [1,3,4] %}
+							<input type="radio" id="{{ player.playerId }}" name="player1" value="{{ player.name }}">
+							<label for = "{{ player.playerId }}">{{ player.name }}<img src="static/images/trophy.png" width="10px"></label>
+						{% else %}
+							<input type="radio" id="{{ player.playerId }}" name="player1" value="{{ player.name }}">
+							<label for = "{{ player.playerId }}">{{ player.name }}</label>
+						{% endif %}
+
 					{%endfor%}
 					</fieldset>
 				</div>
@@ -20,8 +26,13 @@
 					<h3>Choose Player 2.</h3>
 					<fieldset>
 					{% for player in players %}
-						<input type="radio" id="{{ player.playerId }}_2" name="player2" value="{{ player.name }}">
-						<label for = "{{ player.playerId }}_2">{{ player.name }}</label>
+						{% if player.playerId in [1,3,4] %}
+							<input type="radio" id="{{ player.playerId }}_2" name="player2" value="{{ player.name }}">
+							<label for = "{{ player.playerId }}_2">{{ player.name }}<img src="static/images/trophy.png" width="10px"></label>
+						{% else %}
+							<input type="radio" id="{{ player.playerId }}_2" name="player2" value="{{ player.name }}">
+							<label for = "{{ player.playerId }}_2">{{ player.name }}</label>
+						{% endif %}
 					{%endfor%}
 					</fieldset>
 				</div>
